Correction collapse episodes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -75,7 +75,10 @@
 
 /*//////////////////////    CSS SEASON-SELECT BOX      //////////////////////*/
 .season-select-div {
-    padding: 25px 0px 25px 10px;
+    padding: 25px 10px 25px 10px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .season-select {
@@ -194,14 +197,29 @@ header{
 }
 
 @media screen and (min-width: 640px) {
-    header{
-        height: 100%;
-    }
     .watched {
         text-align: right;
     }
 }
 
+/*////////////////////// SEASONS //////////////////////*/
+.card.episodes{
+    height: 100%;
+    width: 80%;
+    margin: 15px;
+}
+
+#accordion{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.infos-episodes{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 /***********************  F O R   A L L   V E R S I O N  ***************************/
 .mostbuzzedcard{
     margin: 15px 5% 15px 5%;
